add 'Back to github' button

--- a/index.html
+++ b/index.html
@@ -12,3 +12,11 @@ void function(baseElem,href){
 </script>
 
 <script src=cookie-banner.js></script>
+
+<a><script>
+void function(a,href){
+	a.style = "margin:0;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)"
+	a.href = 'https://github.com/deni2020/coockie-banner' // todo: proper href replace regex
+	a.innerText = 'Back to github'
+}(document.currentScript.parentElement,location.href)
+</script>
