add json options from src

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ void function(baseElem,href){
 }(document.currentScript.previousElementSibling,location.href)
 </script>
 
-<script src=cookie-banner.js></script>
+<script src='cookie-banner.js#{"buttonBgColor":"red"}'></script>
 
 <a><script>
 void function(a,href){
