a few more characters

--- a/slim/index.html
+++ b/slim/index.html
@@ -1,2 +1,2 @@
-<base><script>!function(){var h=location.href,e=document.querySelector('base'),m=h.match(/https:\/\/[^.\/]+\.github\.io\/[^.\/]+/);m?(e.href=m+'/'):(m=h.match(/file:\/\/.+\/coockie-banner/))?e.href=m+'/':e.remove()}()</script>
+<base><script>!function(){var h=location.href,e=document.querySelector('base'),m=h.match(/https:\/\/[^.\/]+\.github\.io\/[^.\/]+/)||h.match(/file:\/\/.+\/coockie-banner/);m?e.href=m+'/':e.remove()}()</script>
 <script src=cookie-banner.js></script>
